[metadata]
name = openai-python-api
version = attr: openai-python-api.0.0.4
author = Iliya Vereshchagin
author_email = i.vereshchagin@gmail.com
url = https://github.com/wwakabobik/openai_api
description = OpenAI Python API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = openai, chatgpt, dalle, dalle2, ai, artificial intelligence, api, gpt
license = MIT License
python_requires = >=3.9
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3.10,
    Programming Language :: Python :: 3.11

[options]
install_requires =
    requests
    aiohttp
    aiofiles
    asyncio
    requests
    urllib3
    async-timeout
    certifi
    charset-normalizer
    frozenlist

[options.package_data]
* = README.md

[flake8]
max-line-length = 120
extend-ignore = Q000,WPS306,I001,I005,WPS229,D400,WPS317,S101,WPS507,DAR201,DAR101,WPS112,F401,WPS300,WPS412,DAR301,D401,D205,WPS615,I004,WPS110,WPS420,C812,WPS404,WPS221,WPS305,WPS323,WPS204,WPS226,WPS220,WPS214,WPS217,WPS210,WPS111,WPS213,WPS211,WPS231
