[metadata]
name = openai_python_api
version = attr: openai_python_api.0.1.0
author = Iliya Vereshchagin
author_email = i.vereshchagin@gmail.com
maintainer = Iliya Vereshchagin
maintainer_email = i.vereshchagin@gmail.com
url = https://github.com/wwakabobik/openai_api
description = OpenAI Python API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = openai, chatgpt, dalle, dalle2, dalle3, ai, artificial intelligence, api, gpt, chatgpt4
license = MIT License
python_requires = >=3.9
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Human Machine Interfaces

[options]
install_requires =
    requests
    aiohttp
    aiofiles
    asyncio
    requests
    urllib3
    async-timeout
    certifi
    charset-normalizer
    frozenlist

[options.package_data]
* = README.md

[flake8]
max-line-length = 120
max-imports = 15
extend-ignore = Q000,WPS306,I001,I005,WPS229,D400,WPS317,S101,WPS507,DAR201,DAR101,WPS112,F401,WPS300,WPS412,DAR301,D401,D205,WPS615,I004,WPS110,WPS420,C812,WPS404,WPS221,WPS305,WPS323,WPS204,WPS226,WPS220,WPS214,WPS217,WPS210,WPS111,WPS213,WPS211,WPS231
